Fix chrome 74+ multivideo border align

--- a/src/js/components/panel-multi-video.scss
+++ b/src/js/components/panel-multi-video.scss
@@ -86,7 +86,7 @@
 
             .autoscale-video-wrapper {
                 position: relative;
-
+                flex-basis: 0; // fix chrome 74 for multivideos
                 video {
                     position: relative;
                     width: 100%;
